[package]
name = "bili-live-ws"
version = "0.1.0"
authors = ["cheng"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"
tokio = { version = "0.3", features = ["full"] }
tokio-tungstenite = { version = "0.12.0", features = ["connect", "tls"] }
attohttpc = { version = "0.16.0", features = ["tls", "json"] }
serde = {version="1", features = ["derive"]}
serde_json = "1"
byteorder = "1.3.4"
num-traits = "0.2"
num-derive = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
miniz_oxide = "0.4.3"