[package]
name = "bilibili-live-danmaku"
version = "0.1.0"
authors = ["Harry Cheng <chengyuhui1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"

byteorder = "1.3.4"
num-traits = "0.2"
num-derive = "0.3"

miniz_oxide = "0.4.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.13.0", features = ["connect", "tls"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
